<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewItemSPlace"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_basic"
        android:layout_marginTop="@dimen/margin_small2"
        android:layout_marginBottom="@dimen/margin_small1"
        android:backgroundTint="@color/item_background"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewItemSPlaceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/margin_big4"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/pretendard_semibold"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/font_big2"
                app:layout_constraintEnd_toStartOf="@+id/iconItemSPlaceMore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="여행지 이름" />

            <TextView
                android:id="@+id/textViewItemSPlaceCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/pretendard_light"
                android:textColor="@color/text_tertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewItemSPlaceName"
                app:layout_constraintTop_toBottomOf="@+id/textViewItemSPlaceName"
                tools:text="여행지 카테고리" />

            <ImageView
                android:id="@+id/iconItemSPlaceMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/text_view_detail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_chevron_right_24px" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/textViewItemSPlaceCategory"
                app:layout_constraintStart_toEndOf="@+id/textViewItemSPlaceCategory"
                app:layout_constraintTop_toTopOf="@+id/textViewItemSPlaceCategory">

                <ImageView
                    android:id="@+id/iconISPPhysicalDisability"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/text_physical_disability"
                    app:srcCompat="@drawable/physical_disability_radius_icon" />

                <ImageView
                    android:id="@+id/iconISPVisualImpairment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/text_visual_impairmnet"
                    app:srcCompat="@drawable/visual_impairment_radius_icon" />

                <ImageView
                    android:id="@+id/iconISPHearingImpairment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/text_hearing_impairment"
                    app:srcCompat="@drawable/hearing_impairment_radius_icon" />

                <ImageView
                    android:id="@+id/iconISPInfantFamily"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/text_infant_family"
                    android:visibility="visible"
                    app:srcCompat="@drawable/infant_familly_radius_icon" />

                <ImageView
                    android:id="@+id/iconISPElderlyPeople"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/text_elderly_person"
                    app:srcCompat="@drawable/elderly_people_radius_icon" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>